Fixed overflow in the tabs text
Former-commit-id: 2fbcb04dbb002b6938203a744594b4f80c133780

--- a/pyworkflow/web/pages/resources/css/general_style_base_flex.css
+++ b/pyworkflow/web/pages/resources/css/general_style_base_flex.css
@@ -18,3 +18,7 @@ html, body {
     display: inline-block;
 }
 
+.center {
+	min-width: 20em;
+}
+
